.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:26:50 **** Clean-only build of configuration Debug for project 06EjercicioClase6 ****
rm -rf EjercicioClase6.d 06EjercicioClase6.exe EjercicioClase6.o 
11:27:03 **** Rebuild of configuration Debug for project 06EjercicioClase6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase6.o "..\\EjercicioClase6.c" 
gcc -o 06EjercicioClase6.exe EjercicioClase6.o 
Info: Nothing to build for 06EjercicioClase6
11:33:46 **** Incremental Build of configuration Debug for project 06EjercicioClase6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase6.o "..\\EjercicioClase6.c" 
gcc -o 06EjercicioClase6.exe EjercicioClase6.o 
11:34:12 **** Incremental Build of configuration Debug for project 06EjercicioClase6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase6.o "..\\EjercicioClase6.c" 
gcc -o 06EjercicioClase6.exe EjercicioClase6.o 
11:34:37 **** Incremental Build of configuration Debug for project 06EjercicioClase6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase6.o "..\\EjercicioClase6.c" 
gcc -o 06EjercicioClase6.exe EjercicioClase6.o 
11:36:21 **** Incremental Build of configuration Debug for project 06EjercicioClase6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase6.o "..\\EjercicioClase6.c" 
gcc -o 06EjercicioClase6.exe EjercicioClase6.o 
11:36:37 **** Incremental Build of configuration Debug for project 06EjercicioClase6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase6.o "..\\EjercicioClase6.c" 
gcc -o 06EjercicioClase6.exe EjercicioClase6.o 
11:44:37 **** Incremental Build of configuration Debug for project 06EjercicioClase6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase6.o "..\\EjercicioClase6.c" 
..\EjercicioClase6.c:76:43: error: unknown type name 'R'
 void printTransposedMatrix(int ** matrix, R, C);
                                           ^
..\EjercicioClase6.c:76:46: error: unknown type name 'C'
 void printTransposedMatrix(int ** matrix, R, C);
                                              ^
..\EjercicioClase6.c:77:2: error: expected identifier or '(' before 'for'
  for (int i = 0; i<C; i++) {
  ^~~
..\EjercicioClase6.c:77:19: error: expected '=', ',', ';', 'asm' or '__attribute__' before '<' token
  for (int i = 0; i<C; i++) {
                   ^
..\EjercicioClase6.c:77:24: error: expected '=', ',', ';', 'asm' or '__attribute__' before '++' token
  for (int i = 0; i<C; i++) {
                        ^~
..\EjercicioClase6.c: In function 'main':
..\EjercicioClase6.c:104:5: warning: implicit declaration of function 'printTransposedMatrix' [-Wimplicit-function-declaration]
     printTransposedMatrix(myIntMatrix, R, C);
     ^~~~~~~~~~~~~~~~~~~~~
11:44:58 **** Incremental Build of configuration Debug for project 06EjercicioClase6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase6.o "..\\EjercicioClase6.c" 
..\EjercicioClase6.c:76:43: error: unknown type name 'R'
 void printTransposedMatrix(int ** matrix, R, C) {
                                           ^
..\EjercicioClase6.c:76:46: error: unknown type name 'C'
 void printTransposedMatrix(int ** matrix, R, C) {
                                              ^
11:45:49 **** Incremental Build of configuration Debug for project 06EjercicioClase6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase6.o "..\\EjercicioClase6.c" 
gcc -o 06EjercicioClase6.exe EjercicioClase6.o 
11:46:55 **** Incremental Build of configuration Debug for project 06EjercicioClase6 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o EjercicioClase6.o "..\\EjercicioClase6.c" 
gcc -o 06EjercicioClase6.exe EjercicioClase6.o 
